# mksub-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: generator.rs  io.rs  io_utils.rs  main.rs  rr.rs
