[package]
name = "mksub-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mksub-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
regex = "1.11.2"
rayon = "1.11"
crossbeam-channel = "0.5.15"
ctrlc = "3.5"
anyhow = "1.0.99"
colored = "2.2"

[dev-dependencies]
tempfile = "3.21"
